filled in the letters sections with data

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Syllables</h3>
                         <div class="item-box" id="syllable-box"></div>
-                        <!-- <button class="prev" onclick="syllableLesson.getPreviousItem('syllable-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="syllableLesson.getNextItem('syllable-box')" >Next</button> -->
+                        <button class="prev" onclick="syllableLesson.getPreviousItem('syllable-box')" >Prev</button>
+                        <button class="next" onclick="syllableLesson.getNextItem('syllable-box')" >Next</button>
                     </section>
                     <section class="description-box" id = "syllable-description"></section>
                 </div>
@@ -78,8 +78,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Compounds</h3>
                         <div class="item-box" id="compound-box"></div>
-                        <!-- <button class="prev" onclick="compoundLesson.getPreviousItem('compound-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="compoundLesson.getNextItem('compound-box')" >Next</button> -->
+                        <button class="prev" onclick="compoundLesson.getPreviousItem('compound-box')" >Prev</button>
+                        <button class="next" onclick="compoundLesson.getNextItem('compound-box')" >Next</button>
                     </section>
                     <section class="description-box" id = "compound-description"></section>
                 </div>
