--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Noun</h3>
                             <div class="item-box" id="noun-box"></div>
-                            <!-- <button class="prev" onclick="nounLesson.getPreviousItem('noun-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="nounLesson.getNextItem('noun-box')" >Next</button> -->
+                            <button class="prev" onclick="nounLesson.getPreviousItem('noun-box')" >Prev</button>
+                            <button class="next" onclick="nounLesson.getNextItem('noun-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -110,8 +110,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Pronoun</h3>
                             <div class="item-box" id="pronoun-box"></div>
-                            <!-- <button class="prev" onclick="pronounLesson.getPreviousItem('pronoun-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="pronounLesson.getNextItem('pronoun-box')" >Next</button> -->
+                            <button class="prev" onclick="pronounLesson.getPreviousItem('pronoun-box')" >Prev</button>
+                            <button class="next" onclick="pronounLesson.getNextItem('pronoun-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -120,8 +120,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Verb</h3>
                             <div class="item-box" id="verb-box"></div>
-                            <!-- <button class="prev" onclick="verbLesson.getPreviousItem('verb-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="verbLesson.getNextItem('verb-box')" >Next</button> -->
+                            <button class="prev" onclick="verbLesson.getPreviousItem('verb-box')" >Prev</button>
+                            <button class="next" onclick="verbLesson.getNextItem('verb-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -130,8 +130,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Adjective</h3>
                             <div class="item-box" id="adjective-box"></div>
-                            <!-- <button class="prev" onclick="adjectiveLesson.getPreviousItem('adjective-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="adjectiveLesson.getNextItem('adjective-box')" >Next</button> -->
+                            <button class="prev" onclick="adjectiveLesson.getPreviousItem('adjective-box')" >Prev</button>
+                            <button class="next" onclick="adjectiveLesson.getNextItem('adjective-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -150,8 +150,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Conjunction</h3>
                             <div class="item-box" id="conjunction-box"></div>
-                            <!-- <button class="prev" onclick="conjunctionLesson.getPreviousItem('conjunction-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="conjunctionLesson.getNextItem('conjunction-box')" >Next</button> -->
+                            <button class="prev" onclick="conjunctionLesson.getPreviousItem('conjunction-box')" >Prev</button>
+                            <button class="next" onclick="conjunctionLesson.getNextItem('conjunction-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -160,8 +160,8 @@
                     <section class="lesson-box">
                             <h3 class="lesson-title">Preposition</h3>
                             <div class="item-box" id="preposition-box"></div>
-                            <!-- <button class="prev" onclick="prepositionLesson.getPreviousItem('preposition-box')" >Prev</button> -->
-                            <!-- <button class="next" onclick="prepositionLesson.getNextItem('preposition-box')" >Next</button> -->
+                            <button class="prev" onclick="prepositionLesson.getPreviousItem('preposition-box')" >Prev</button>
+                            <button class="next" onclick="prepositionLesson.getNextItem('preposition-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -178,8 +178,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Present</h3>
                         <div class="item-box" id="present-box"></div>
-                        <!-- <button class="prev" onclick="presentLesson.getPreviousItem('present-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="presentLesson.getNextItem('present-box')" >Next</button> -->
+                        <button class="prev" onclick="presentLesson.getPreviousItem('present-box')" >Prev</button>
+                        <button class="next" onclick="presentLesson.getNextItem('present-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -188,8 +188,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Past</h3>
                         <div class="item-box" id="past-box"></div>
-                        <!-- <button class="prev" onclick="pastLesson.getPreviousItem('past-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="pastLesson.getNextItem('past-box')" >Next</button> -->
+                        <button class="prev" onclick="pastLesson.getPreviousItem('past-box')" >Prev</button>
+                        <button class="next" onclick="pastLesson.getNextItem('past-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -198,8 +198,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Future</h3>
                         <div class="item-box" id="future-box"></div>
-                        <!-- <button class="prev" onclick="futureLesson.getPreviousItem('future-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="futureLesson.getNextItem('future-box')" >Next</button> -->
+                        <button class="prev" onclick="futureLesson.getPreviousItem('future-box')" >Prev</button>
+                        <button class="next" onclick="futureLesson.getNextItem('future-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -218,8 +218,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Beginner</h3>
                         <div class="item-box" id="beginner-box"></div>
-                        <!-- <button class="prev" onclick="beginnerReadings.getPreviousItem('beginner-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="beginnerReadings.getNextItem('beginner-box')" >Next</button> -->
+                        <button class="prev" onclick="beginnerReadings.getPreviousItem('beginner-box')" >Prev</button>
+                        <button class="next" onclick="beginnerReadings.getNextItem('beginner-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -228,8 +228,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Intermediate</h3>
                         <div class="item-box" id="intermediate-box"></div>
-                        <!-- <button class="prev" onclick="intermediateReadings.getPreviousItem('intermediate-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="intermediateReadings.getNextItem('intermediate-box')" >Next</button> -->
+                        <button class="prev" onclick="intermediateReadings.getPreviousItem('intermediate-box')" >Prev</button>
+                        <button class="next" onclick="intermediateReadings.getNextItem('intermediate-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -238,8 +238,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Advanced</h3>
                         <div class="item-box" id="advanced-box"></div>
-                        <!-- <button class="prev" onclick="advancedReadings.getPreviousItem('advanced-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="advancedReadings.getNextItem('advanced-box')" >Next</button> -->
+                        <button class="prev" onclick="advancedReadings.getPreviousItem('advanced-box')" >Prev</button>
+                        <button class="next" onclick="advancedReadings.getNextItem('advanced-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
@@ -248,8 +248,8 @@
                     <section class="lesson-box">
                         <h3 class="lesson-title">Native</h3>
                         <div class="item-box" id="native-box"></div>
-                        <!-- <button class="prev" onclick="nativeReadings.getPreviousItem('native-box')" >Prev</button> -->
-                        <!-- <button class="next" onclick="nativeReadings.getNextItem('native-box')" >Next</button> -->
+                        <button class="prev" onclick="nativeReadings.getPreviousItem('native-box')" >Prev</button>
+                        <button class="next" onclick="nativeReadings.getNextItem('native-box')" >Next</button>
                     </section>
                     <section class="description-box"></section>
                 </div>
