added flag icon at the masthead.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="app-wrapper">
         <header id="main-header">
-            <h1 id="landing-masthead" class="masthead main-link active-main-link">Learn Nepali Now</h1>
+            <h1 id="landing-masthead" class="masthead main-link active-main-link"> <img src="np.svg"> Learn Nepali Now</h1>
         </header>
             <!-- --Landing Page Begins Below-- -->
         <main class="main-pages" id="landing-page">
