added nepali flag to why nepali title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="app-wrapper">
         <header id="main-header">
-            <h1 id="landing-masthead" class="masthead main-link active-main-link"> <img src="np.svg"> Learn Nepali Now</h1>
+            <h1 id="landing-masthead" class="masthead main-link active-main-link"> <img src="np.svg"> Learn Nepali Now </h1>
         </header>
             <!-- --Landing Page Begins Below-- -->
         <main class="main-pages" id="landing-page">
@@ -27,7 +27,7 @@
                 <button id="start-button" class="main-link active-main-link">Start Learning</button>
             </section>
             <section id="why-nepali">
-                <h3 class="why-nepali-title">Why Learn Nepali</h3>
+                <h3 class="why-nepali-title"> <img src="np.svg">Why Learn Nepali</h3>
                 <ul>
                     <li>Read Nepali literature and news</li>
                     <li>Bargain well in Nepali markets</li>
