main.mjs file path

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="nepali language, south asian language, learn language, nepalese language, nepal, ka kha ga, nepali bhasa">
     <meta name="description" content="A progressive web app for learning Nepali language vowels, alphabets, root syllables, compound syllables, words, and sentences." >
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Learn Nepali Now</title>
 </head>
 <body>
     <section id="app-wrapper">
         <header id="main-header">
-            <h1 id="landing-masthead" class="masthead main-link active-main-link"> <img src="/np.svg"> Learn Nepali Now </h1>
+            <h1 id="landing-masthead" class="masthead main-link active-main-link"> <img src="np.svg"> Learn Nepali Now </h1>
         </header>
             <!-- --Landing Page Begins Below-- -->
         <main class="main-pages" id="landing-page">
@@ -257,6 +257,6 @@
         </main>
         <!--Lesson Page Ends-->
     </section>
-    <script src="/main.mjs" type="module"></script>
+    <script src="main.mjs" type="module"></script>
 </body>
 </html>
