--- a/index.html
+++ b/index.html
@@ -257,6 +257,6 @@
         </main>
         <!--Lesson Page Ends-->
     </section>
-    <script src="js/main.mjs" type="module"></script>
+    <script src="./js/main.mjs" type="module"></script>
 </body>
 </html>
