further cleaned up the main loadApp function

--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
             </section>
         </main>
         <!--Lesson Page Ends-->
+        <main class="main-pages" id="blog-page"></main>
     </section>
     <script src="/js/main.mjs" type="module"></script>
 </body>
